"mise a jour sur site

--- a/src/app/pages/apps/courses/courses.component.html
+++ b/src/app/pages/apps/courses/courses.component.html
@@ -60,7 +60,7 @@
           [routerLink]="['/apps/courses/coursesdetail/', course.Id]"
           class="w-100"
         >
-          START
+          TELECHARGER
         </a>
       </mat-card-actions>
     </mat-card>
