--- a/src/app/pages/apps/taskboard/taskboard.component.html
+++ b/src/app/pages/apps/taskboard/taskboard.component.html
@@ -25,6 +25,7 @@
               cdkDropList
               (cdkDropListDropped)="drop($event)"
             >
+            <div class="taskboard-task" cdkDrag></div>
               @for(task of todos; track task.title) {
               <div class="taskboard-task" cdkDrag>
                 <div class="f-s-16 m-b-4 f-w-600">{{ task.title }}</div>
@@ -33,6 +34,19 @@
                 }}</span>
                 <div>
                   <div class="d-flex justify-content-end">
+                    <button
+                    mat-icon-button
+
+                    class="d-flex justify-content-center"
+                    >
+                      <mat-icon class="d-flex justify-content-center"
+                        ><i-tabler
+                          name="edit"
+                          class="icon-18 d-flex"
+                        ></i-tabler
+                      ></mat-icon>
+                   </button>
+
                     <button
                       mat-icon-button
                       (click)="deleteTask(task)"
@@ -45,6 +59,8 @@
                         ></i-tabler
                       ></mat-icon>
                     </button>
+
+
                   </div>
                 </div>
               </div>
@@ -76,6 +92,20 @@
                 }}</span>
                 <div>
                   <div class="d-flex justify-content-end">
+
+                    <button
+                    mat-icon-button
+
+                    class="d-flex justify-content-center"
+                    >
+                      <mat-icon class="d-flex justify-content-center"
+                        ><i-tabler
+                          name="edit"
+                          class="icon-18 d-flex"
+                        ></i-tabler
+                      ></mat-icon>
+                   </button>
+
                     <button
                       mat-icon-button
                       (click)="deleteTask(task)"
@@ -120,6 +150,19 @@
                 <div>
                   <div class="d-flex justify-content-end">
                     <button
+                    mat-icon-button
+
+                    class="d-flex justify-content-center"
+                    >
+                      <mat-icon class="d-flex justify-content-center"
+                        ><i-tabler
+                          name="edit"
+                          class="icon-18 d-flex"
+                        ></i-tabler
+                      ></mat-icon>
+                   </button>
+
+                    <button
                       mat-icon-button
                       (click)="deleteTask(task)"
                       class="d-flex justify-content-center"
@@ -162,6 +205,20 @@
                 }}</span>
                 <div>
                   <div class="d-flex justify-content-end">
+                    <button
+                    mat-icon-button
+
+                    class="d-flex justify-content-center"
+                    >
+                      <mat-icon class="d-flex justify-content-center"
+                        ><i-tabler
+                          name="edit"
+                          class="icon-18 d-flex"
+                        ></i-tabler
+                      ></mat-icon>
+                   </button>
+
+
                     <button
                       mat-icon-button
                       (click)="deleteTask(task)"
