--- a/src/app/pages/apps/ticketlist/ticket-dialog-content.html
+++ b/src/app/pages/apps/ticketlist/ticket-dialog-content.html
@@ -6,40 +6,114 @@
     <div class="row">
       <div class="col-sm-6 col-lg-12">
         <mat-form-field appearance="outline" class="w-100">
+          <mat-label>id</mat-label>
           <input type="text" matInput required id="id" name="id" [(ngModel)]="local_data.id" placeholder="id" />
         </mat-form-field>
       </div>
       <div class="col-sm-6 col-lg-12">
         <mat-form-field appearance="outline" class="w-100">
+          <mat-label>Titre</mat-label>
           <input type="text" matInput required id="title" name="title" [(ngModel)]="local_data.title"
             placeholder="ticket title" />
         </mat-form-field>
       </div>
       <div class="col-sm-6 col-lg-12">
         <mat-form-field appearance="outline" class="w-100">
+          <mat-label>Détails projet</mat-label>
           <input type="text" matInput required id="subtext" name="subtext" [(ngModel)]="local_data.subtext"
             placeholder="ticket subtext" />
         </mat-form-field>
       </div>
-      <div class="col-sm-6 col-lg-12">
+
+      <!-- <div class="col-sm-6 col-lg-12">
         <mat-form-field appearance="outline" class="w-100">
+          <mat-label>Assigné à</mat-label>
           <input type="text" matInput required id="assignee" name="assignee" [(ngModel)]="local_data.assignee"
             placeholder="assigned to" />
         </mat-form-field>
+      </div> -->
+
+      <div class="col-sm-6 col-lg-12">
+        <mat-form-field appearance="outline" class="w-100">
+          <mat-label>Assigné à</mat-label>
+          <input
+          matInput required id="assignee" name="assignee"
+          aria-label="State"
+          [matAutocomplete]="auto2"
+          [(ngModel)]="local_data.assignee"
+          [formControl]="stateCtrl"
+        />
+        </mat-form-field>
+
+      <mat-autocomplete #auto2="matAutocomplete">
+        @for(employee of filteredSEmployee| async; track employee.Name) {
+        <mat-option (click)="updatePicture(employee.imagePath)"
+          [value]="employee.Name"
+          class="d-flex align-items-center"
+        >
+          <img alt="" class="m-r-8" [src]="employee.imagePath" height="25" />
+
+          <span>{{ employee.Name }}</span> |
+          <small>Pôle: {{ employee.Salary }}</small>
+        </mat-option>
+        }
+
+      </mat-autocomplete>
       </div>
+
       <div class="col-sm-6 col-lg-12">
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Status</mat-label>
           <select matNativeControl required name="status" [(ngModel)]="local_data.status">
-            <option value="inprogress">In Progress</option>
-            <option value="open">Open</option>
-            <option value="closed">Closed</option>
+            <option value="En cours">En cours</option>
+            <option value="Ouvert">Ouvert</option>
+            <option value="Fermé">Fermé</option>
           </select>
         </mat-form-field>
       </div>
+
+
+      <div class="col-sm-6 col-lg-12">
+
+        <div>
+          <label id="example-name-label" class="f-w-600 mat-body-1"
+            >Progression {{local_data.progression}} % :
+          </label>
+          <!-- <label class="f-w-500 mat-body-1">{{ local_data.progression }}</label> -->
+        </div>
+        <mat-slider style="width: 98%;"
+          class="example-margin"
+          [disabled]="false"
+          [max]=100
+          [min]=0
+          [step]="1"
+          [discrete]="true"
+          [showTickMarks]="false"
+        >
+          <input matSliderThumb [(ngModel)]="local_data.progression" [ngModelOptions]="{standalone: true}" />
+        </mat-slider>
+
+      </div>
+
+
       <div class="col-sm-6 col-lg-12">
 
         <mat-form-field appearance="outline" class="w-100">
+          <mat-label>Commentaire</mat-label>
+          <textarea
+            matInput
+            rows="5"
+            class="note-content"
+          ></textarea>
+        </mat-form-field>
+      </div>
+
+
+
+      <div class="col-sm-6 col-lg-12">
+
+        <mat-form-field appearance="outline" class="w-100">
+          <mat-label>Date de début</mat-label>
           <input placeholder="Date" [matDatepicker]="picker" matInput required id="date" name="date"
             [(ngModel)]="local_data.date" />
           <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
