--- a/src/app/pages/apps/ticketlist/ticketlist.component.html
+++ b/src/app/pages/apps/ticketlist/ticketlist.component.html
@@ -115,6 +115,13 @@
           </td>
         </ng-container>
 
+        <ng-container matColumnDef="progression">
+          <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">Progression</th>
+          <td mat-cell *matCellDef="let element" class="f-s-14">
+            {{ element.progression }}  %
+          </td>
+        </ng-container>
+
         <ng-container matColumnDef="date">
           <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">Date</th>
           <td mat-cell *matCellDef="let element" class="f-s-14">
