--- a/src/app/pages/authentication/boxed-forgot-password/boxed-forgot-password.component.html
+++ b/src/app/pages/authentication/boxed-forgot-password/boxed-forgot-password.component.html
@@ -59,14 +59,14 @@
                           }
                         </mat-form-field>
 
-                        <button
+                        <!-- <button
                           mat-flat-button
                           color="primary"
                           class="w-100"
                           [disabled]="!form.valid"
                         >
                           Forgot Password
-                        </button>
+                        </button> -->
                         <a
                           [routerLink]="['/authentication/boxed-login']"
                           mat-stroked-button
@@ -98,14 +98,12 @@
                         width="300"
                         class="img-fluid"
                       />
-                      <h4 class="mb-0 f-s-22 m-y-20">Feature Rich 3D Charts</h4>
+                      <h4 class="mb-0 f-s-22 m-y-20">Lendys Factory</h4>
                       <p class="f-s-15 m-b-20 m-t-0 mat-body-1">
-                        Donec justo tortor, malesuada vitae faucibus ac,
-                        tristique sit amet massa. Aliquam dignissim nec felis
-                        quis imperdiet.
+                        Le pôle Transformation Finance donne vie à vos projets.
                       </p>
                       <button mat-flat-button color="primary">
-                        Learn More
+                        En savoir plus
                       </button>
                     </div>
                   </div>
