--- a/src/app/pages/authentication/boxed-login/boxed-login.component.html
+++ b/src/app/pages/authentication/boxed-login/boxed-login.component.html
@@ -18,18 +18,19 @@
                     <div class="p-30">
                       <a [routerLink]="['/']">
                         <img
-                          src="./assets/images/logos/logo.svg"
+                          src="https://www.lendys.fr/wp-content/uploads/2015/12/LogoLendys-Large.png"
                           class="align-middle m-2"
                           alt="logo"
+                          style="width:150px ;"
                         />
                       </a>
-                      <h4 class="f-w-700 f-s-34 m-t-24 m-b-8">
-                        Let's get you signed in
-                      </h4>
+                      <p style="font-size: 30px;">
+                        Se connecter
+                      </p>
 
                       <div class="row m-t-24">
                         <div class="col-6">
-                          <button mat-stroked-button class="w-100">
+                          <!-- <button mat-stroked-button class="w-100">
                             <div class="d-flex align-items-center">
                               <img
                                 src="/assets/images/svgs/google-icon.svg"
@@ -38,7 +39,7 @@
                                 class="m-r-8"
                               />
                               <span class="d-none d-lg-block m-r-4"
-                                >Sign in with </span
+                                >Se connecter avec </span
                               >
                               Google
                             </div>
@@ -57,17 +58,17 @@
                                 class="m-r-4"
                               />
                               <span class="d-none d-lg-block m-r-4"
-                                >Sign in with </span
+                                >Se connecter avec </span
                               >
                               Facebook
                             </div>
-                          </button>
+                          </button> -->
                         </div>
                       </div>
 
-                      <div class="or-border m-t-30 text-muted">
-                        or Sign in with
-                      </div>
+                      <!-- <div class="or-border m-t-30 text-muted">
+                        Ou se connecter avec
+                      </div> -->
 
                       <form
                         class="m-t-30"
@@ -76,7 +77,7 @@
                       >
                         <mat-label
                           class="f-s-14 f-w-600 m-b-12 d-block"
-                          >Username</mat-label
+                          >Nom d'utilisateur</mat-label
                         >
                         <mat-form-field
                           appearance="outline"
@@ -88,11 +89,11 @@
                           <mat-hint class="m-b-16 error-msg">
                             @if(f['uname'].errors &&
                             f['uname'].errors['required']) {
-                            <div class="text-error">Name is required.</div>
+                            <div class="text-error">Le nom est requis.</div>
                             } @if(f['uname'].errors &&
                             f['uname'].errors['minlength']) {
                             <div class="text-error">
-                              Name should be 6 character.
+                              Le nom d'utilisateur doit contenir 6 caractères minimum
                             </div>
                             }
                           </mat-hint>
@@ -105,13 +106,13 @@
                         >
                           <mat-label
                             class="f-s-14 f-w-600 d-block"
-                            >Password</mat-label
+                            >Mot de passe</mat-label
                           >
-                          <a
+                          <!-- <a
                             [routerLink]="['/authentication/boxed-forgot-pwd']"
                             class="text-primary f-w-600 text-decoration-none m-l-auto f-s-12"
                             >Forgot Password ?</a
-                          >
+                          > -->
                         </div>
 
                         <mat-form-field
@@ -128,7 +129,7 @@
                           <mat-hint class="m-b-16 error-msg">
                             @if( f['password'].errors &&
                             f['password'].errors['required']) {
-                            <div class="text-error">Password is required.</div>
+                            <div class="text-error">Le mot de passe est requis.</div>
                             }
                           </mat-hint>
                           }
@@ -136,7 +137,7 @@
 
                         <div class="m-b-12">
                           <mat-checkbox color="primary"
-                            >Keep me logged in</mat-checkbox
+                            >Garder ma session ouverte</mat-checkbox
                           >
                         </div>
                         <button
@@ -144,19 +145,22 @@
                           color="primary"
                           class="w-100"
                           [disabled]="!form.valid"
+
                         >
-                          Sign In
+
+                          Se connecter
                         </button>
                         <!-- input -->
                       </form>
                       <span class="d-block f-w-500 d-block m-t-24"
-                        >New to Matdash?
+                        >Nouveau sur Lendys Factory ?
                         <a
-                          [routerLink]="['/authentication/boxed-register']"
+
                           class="text-decoration-none text-primary f-w-500 f-s-14"
                         >
-                          Create an account</a
+                          Créer un compte</a
                         >
+                        <!-- [routerLink]="['/authentication/boxed-register']" -->
                       </span>
                     </div>
                   </div>
@@ -174,19 +178,17 @@
                       class="d-flex align-items-center justify-content-center w-100 h-100 flex-column gap-9 text-center"
                     >
                       <img
-                        src="/assets/images/backgrounds/login-side.png"
+                        src="https://www.lendys.fr/wp-content/uploads/2015/12/LogoLendys-Large.png"
                         alt="login-side-img"
                         width="300"
                         class="img-fluid"
                       />
-                      <h4 class="mb-0 f-s-22 m-y-20">Feature Rich 3D Charts</h4>
+                      <h4 class="mb-0 f-s-22 m-y-20">Suivi Interco</h4>
                       <p class="f-s-15 m-b-20 m-t-0 mat-body-1">
-                        Donec justo tortor, malesuada vitae faucibus ac,
-                        tristique sit amet massa. Aliquam dignissim nec felis
-                        quis imperdiet.
+                        Le pôle Transformation Finance donne vie à vos projets
                       </p>
                       <button mat-flat-button color="primary">
-                        Learn More
+                        En savoir plus
                       </button>
                     </div>
                   </div>
