--- a/src/app/layouts/full/vertical/header/header.component.html
+++ b/src/app/layouts/full/vertical/header/header.component.html
@@ -2,31 +2,15 @@
   <!-- --------------------------------------------------------------- -->
   <!-- Desktop Menu -->
   @if(showToggle) {
-  <button
-    mat-mini-fab
-    color="inherit"
-    (click)="toggleCollapsed.emit()"
-    class="d-flex justify-content-center"
-  >
-    <i
-      class="iconify icon-20 d-flex"
-      data-icon="solar:hamburger-menu-line-duotone"
-    ></i>
+  <button mat-mini-fab color="inherit" (click)="toggleCollapsed.emit()" class="d-flex justify-content-center">
+    <i class="iconify icon-20 d-flex" data-icon="solar:hamburger-menu-line-duotone"></i>
   </button>
   }
 
   <!-- Mobile Menu -->
   @if(!showToggle) {
-  <button
-    mat-mini-fab
-    color="inherit"
-    (click)="toggleMobileNav.emit()"
-    class="d-flex justify-content-center"
-  >
-    <i
-      class="iconify icon-20 d-flex"
-      data-icon="solar:hamburger-menu-line-duotone"
-    ></i>
+  <button mat-mini-fab color="inherit" (click)="toggleMobileNav.emit()" class="d-flex justify-content-center">
+    <i class="iconify icon-20 d-flex" data-icon="solar:hamburger-menu-line-duotone"></i>
   </button>
   }
   <!-- --------------------------------------------------------------- -->
@@ -34,12 +18,7 @@
   <!-- --------------------------------------------------------------- -->
   <!--  Search -->
   <!-- --------------------------------------------------------------- -->
-  <button
-    mat-mini-fab
-    color="inherit"
-    (click)="openDialog()"
-    class="d-flex justify-content-center"
-  >
+  <button mat-mini-fab color="inherit" (click)="openDialog()" class="d-flex justify-content-center">
     <i class="iconify icon-20 d-flex" data-icon="solar:magnifer-outline"></i>
   </button>
 
@@ -66,25 +45,15 @@
             <div class="row">
               @for(appdd of apps; track appdd.title) {
               <div class="col-sm-6 text-hover-primary">
-                <a
-                  [routerLink]="[appdd.link]"
-                  class="d-flex align-items-center text-decoration-none m-b-24"
-                >
-                  <span
-                    class="text-{{ appdd.color }} bg-light-{{
+                <a [routerLink]="[appdd.link]" class="d-flex align-items-center text-decoration-none m-b-24">
+                  <span class="text-{{ appdd.color }} bg-light-{{
                       appdd.color
-                    }} rounded icon-48 d-flex align-items-center justify-content-center"
-                  >
-                    <span
-                      class="iconify icon-20"
-                      [attr.data-icon]="appdd.icon"
-                    ></span>
+                    }} rounded icon-48 d-flex align-items-center justify-content-center">
+                    <span class="iconify icon-20" [attr.data-icon]="appdd.icon"></span>
                   </span>
 
                   <div class="m-l-16">
-                    <h5
-                      class="f-s-15 f-w-600 m-0 textprimary mat-subtitle-1 hover-text"
-                    >
+                    <h5 class="f-s-15 f-w-600 m-0 textprimary mat-subtitle-1 hover-text">
                       {{ appdd.title }}
                     </h5>
                     <span class="mat-body-1 f-s-13">{{ appdd.subtitle }}</span>
@@ -96,11 +65,7 @@
           </div>
         </div>
         <div class="col-sm-4">
-          <img
-            src="/assets/images/backgrounds/mega-dd-bg.jpg"
-            alt="mega-dd-bg"
-            class="mega-dd-bg"
-          />
+          <img src="/assets/images/backgrounds/mega-dd-bg.jpg" alt="mega-dd-bg" class="mega-dd-bg" />
         </div>
       </div>
     </mat-menu>
@@ -108,30 +73,14 @@
 
   <span class="flex-1-auto"></span>
 
-  <button
-    mat-mini-fab
-    color="inherit"
-    aria-label="lightdark"
-    class="d-flex justify-content-center"
-    (click)="setDark()"
-  >
-    <i-tabler
-      class="d-flex icon-22"
-      [name]="options.theme === 'dark' ? 'sun' : 'moon'"
-    ></i-tabler>
+  <button mat-mini-fab color="inherit" aria-label="lightdark" class="d-flex justify-content-center" (click)="setDark()">
+    <i-tabler class="d-flex icon-22" [name]="options.theme === 'dark' ? 'sun' : 'moon'"></i-tabler>
   </button>
 
   <!-- Mobile Menu -->
-  <button
-    mat-mini-fab
-    color="inherit"
-    (click)="toggleMobileFilterNav.emit()"
-    class="d-flex d-lg-none justify-content-center"
-  >
-    <i
-      class="iconify icon-20 d-flex"
-      data-icon="solar:widget-3-line-duotone"
-    ></i>
+  <button mat-mini-fab color="inherit" (click)="toggleMobileFilterNav.emit()"
+    class="d-flex d-lg-none justify-content-center">
+    <i class="iconify icon-20 d-flex" data-icon="solar:widget-3-line-duotone"></i>
   </button>
 
   <!-- --------------------------------------------------------------- -->
@@ -150,24 +99,17 @@
     <div class="d-flex align-items-center p-x-32 p-y-16">
       <h6 class="f-s-16 f-w-600 m-0 mat-subtitle-1">Notifications</h6>
       <span class="m-l-auto">
-        <span class="bg-primary text-white p-x-8 p-y-4 f-w-500 rounded f-s-12"
-          >5 new</span
-        >
+        <span class="bg-primary text-white p-x-8 p-y-4 f-w-500 rounded f-s-12">5 new</span>
       </span>
     </div>
 
     @for(notification of notifications; track notification.title) {
     <button mat-menu-item class="p-x-30 p-y-12">
       <div class="d-flex align-items-center">
-        <span
-          class="flex-shrink-0 text-{{ notification.color }} bg-light-{{
+        <span class="flex-shrink-0 text-{{ notification.color }} bg-light-{{
             notification.color
-          }} rounded-circle icon-48 d-flex align-items-center justify-content-center"
-        >
-          <i-tabler
-            name="{{ notification.icon }}"
-            class="icon-20 d-flex"
-          ></i-tabler>
+          }} rounded-circle icon-48 d-flex align-items-center justify-content-center">
+          <i-tabler name="{{ notification.icon }}" class="icon-20 d-flex"></i-tabler>
         </span>
         <div class="m-l-16 w-100">
           <div class="d-flex align-items-center justify-content-between w-100">
@@ -175,12 +117,11 @@
               {{ notification.title }}
             </h5>
             <span class="d-block f-s-12 m-l-auto">
-              {{ notification.time }}</span
-            >
+              {{ notification.time }}</span>
           </div>
           <span class="d-block text-truncate f-s-12 w-75">{{
             notification.subtitle
-          }}</span>
+            }}</span>
         </div>
       </div>
     </button>
@@ -197,19 +138,13 @@
   <!-- langugage Dropdown -->
   <!-- --------------------------------------------------------------- -->
   <button [matMenuTriggerFor]="flags" mat-mini-fab color="inherit">
-    <img
-      [src]="selectedLanguage.icon"
-      class="rounded-circle object-cover icon-20 m-t-2"
-    />
+    <img [src]="selectedLanguage.icon" class="rounded-circle object-cover icon-20 m-t-2" />
   </button>
   <mat-menu #flags="matMenu" class="cardWithShadow">
     @for(lang of languages; track lang.icon) {
     <button mat-menu-item (click)="changeLanguage(lang)">
       <div class="d-flex align-items-center">
-        <img
-          [src]="lang.icon"
-          class="rounded-circle object-cover m-r-8 icon-20"
-        />
+        <img [src]="lang.icon" class="rounded-circle object-cover m-r-8 icon-20" />
         <span class="mat-subtitle-1 f-s-14">{{ lang.language }}</span>
       </div>
     </button>
@@ -219,62 +154,52 @@
   <!-- --------------------------------------------------------------- -->
   <!-- profile Dropdown -->
   <!-- --------------------------------------------------------------- -->
-  <button
-    mat-fab
-    extended
-    color="inherit"
-    [matMenuTriggerFor]="profilemenu"
-    aria-label="Notifications"
-    class="d-flex justify-content-center profile-btn-dd"
-  >
-  <div class="d-flex align-items-center gap-4">
-    <img
-      src="/assets/images/profile/user-1.jpg"
-      class="rounded-circle object-cover icon-35 profile-dd"
-      width="35"
-    />
+  <button mat-fab extended color="inherit" [matMenuTriggerFor]="profilemenu" aria-label="Notifications"
+    class="d-flex justify-content-center profile-btn-dd">
+    <div class="d-flex align-items-center gap-4" *ngIf="this.isConnected">
+      <img src="/assets/images/profile/user-1.jpg" class="rounded-circle object-cover icon-35 profile-dd" width="35" />
 
-    <i data-icon="solar:alt-arrow-down-bold" class="iconify f-s-8"></i>
-  </div>
+      <i data-icon="solar:alt-arrow-down-bold" class="iconify f-s-8"></i>
+    </div>
   </button>
   <mat-menu #profilemenu="matMenu" class="topbar-dd cardWithShadow">
     <div class="p-x-32 p-y-16">
       <div class="d-flex align-items-center p-b-24 b-b-1 m-t-16">
-        <img
-          src="/assets/images/profile/user-1.jpg"
-          class="rounded-circle"
-          width="56"
-        />
+        <img src="/assets/images/profile/user-1.jpg" class="rounded-circle" width="56" />
         <div class="m-l-16">
-          <h6
-            class="f-s-14 f-w-600 m-0 mat-subtitle-1 d-flex align-items-center"
-          >
-            Frédéric EKEWOU
-            <span class="f-s-14 d-block text-success m-l-4">Pro</span>
+          <h6 class="f-s-14 f-w-600 m-0 mat-subtitle-1 d-flex align-items-center">
+            {{this.username}}
+            <span class="f-s-14 d-block text-success m-l-4">Admin</span>
           </h6>
-          <span> frederic.ekewou&#64;lendys.fr </span>
+          <!-- <span> frederic.ekewou&#64;lendys.fr </span> -->
         </div>
       </div>
     </div>
     <div class="p-x-32 p-b-16">
       @for(profile of profiledd; track profile.title) {
-      <a
-        class="p-8 text-decoration-none d-block text-hover-primary"
-        [routerLink]="[profile.link]"
-      >
+      <a class="p-8 text-decoration-none d-block text-hover-primary" [routerLink]="[profile.link]">
         <div class="d-flex align-items-center">
           <h5 class="f-s-14 f-w-600 m-0 textprimary mat-subtitle-1 hover-text">
             {{ profile.title }}
           </h5>
           @if(profile.new) {
-          <span
-            class="bg-light-error text-error rounded-sm p-x-8 p-y-4 f-w-500 f-s-12 m-l-4"
-            >5</span
-          >
+          <span class="bg-light-error text-error rounded-sm p-x-8 p-y-4 f-w-500 f-s-12 m-l-4">5</span>
           }
         </div>
+
+
       </a>
       }
+
+      <a class="p-8 text-decoration-none d-block text-hover-primary">
+        <div class="d-flex align-items-center" (click)="logout()">
+          <h5 class="f-s-14 f-w-600 m-0 textprimary mat-subtitle-1 hover-text">
+            Se déconnecter
+          </h5>
+        </div>
+      </a>
+
+
     </div>
   </mat-menu>
 </mat-toolbar>
