--- a/src/app/pages/apps/ticketlist/ticket-dialog-content.html
+++ b/src/app/pages/apps/ticketlist/ticket-dialog-content.html
@@ -4,24 +4,41 @@
 <mat-dialog-content style="max-width: 500px" class="mat-typography m-t-24">
   <form #userForm="ngForm">
     <div class="row">
-      <div class="col-sm-6 col-lg-12">
+      <!-- <div class="col-sm-6 col-lg-12">
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>id</mat-label>
           <input type="text" matInput required id="id" name="id" [(ngModel)]="local_data.id" placeholder="id" />
         </mat-form-field>
+      </div> -->
+
+      <div class="col-sm-6 col-lg-12" style="margin-top: 6px;">
+        <mat-form-field appearance="outline" class="w-100">
+          <mat-label>Catégorie</mat-label>
+          <select matNativeControl required name="categorie" [(ngModel)]="local_data.categorie">
+            <option value="Projet">Projet</option>
+            <option value="Formation">Formation</option>
+            <option value="IT">IT</option>
+            <option value="Association">Association</option>
+            <option value="Commerciale">Commerciale</option>
+            <option value="Urgence">Urgence</option>
+            <option value="Autre">Autre</option>
+          </select>
+        </mat-form-field>
       </div>
+
+
       <div class="col-sm-6 col-lg-12">
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Titre</mat-label>
-          <input type="text" matInput required id="title" name="title" [(ngModel)]="local_data.title"
-            placeholder="ticket title" />
+          <input type="text" matInput required id="title" name="title" [(ngModel)]="local_data.titre"
+            placeholder="Tritre de l'action" />
         </mat-form-field>
       </div>
       <div class="col-sm-6 col-lg-12">
         <mat-form-field appearance="outline" class="w-100">
-          <mat-label>Détails projet</mat-label>
-          <input type="text" matInput required id="subtext" name="subtext" [(ngModel)]="local_data.subtext"
-            placeholder="ticket subtext" />
+          <mat-label>Détails de l'action</mat-label>
+          <input type="text" matInput required id="subtext" name="subtext" [(ngModel)]="local_data.details"
+            placeholder="Details de l'action" />
         </mat-form-field>
       </div>
 
@@ -36,38 +53,52 @@
       <div class="col-sm-6 col-lg-12">
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Assigné à</mat-label>
-          <input
-          matInput required id="assignee" name="assignee"
-          aria-label="State"
-          [matAutocomplete]="auto2"
-          [(ngModel)]="local_data.assignee"
-          [formControl]="stateCtrl"
-        />
+          <input matInput required id="assignee" name="assignee" aria-label="State" [matAutocomplete]="auto2"
+            [(ngModel)]="local_data.assignee" [formControl]="stateCtrl" />
         </mat-form-field>
 
-      <mat-autocomplete #auto2="matAutocomplete">
-        @for(employee of filteredSEmployee| async; track employee.Name) {
-        <mat-option (click)="updatePicture(employee.imagePath)"
-          [value]="employee.Name"
-          class="d-flex align-items-center"
-        >
-          <img alt="" class="m-r-8" [src]="employee.imagePath" height="25" />
 
-          <span>{{ employee.Name }}</span> |
-          <small>Pôle: {{ employee.Salary }}</small>
-        </mat-option>
-        }
+        <mat-autocomplete #auto2="matAutocomplete">
+          @for(employee of filteredSEmployee| async; track employee.nomComplet) {
+          <mat-option (click)="updatePicture(employee)" [value]="employee.nomComplet" class="d-flex align-items-center">
+            <img alt="" class="m-r-8" [src]="employee.avatar" height="25" />
 
-      </mat-autocomplete>
+            <span>{{ employee.nomComplet}} </span> |
+            <small>Pôle: {{ employee.pole }}</small>
+          </mat-option>
+          }
+
+        </mat-autocomplete>
       </div>
 
       <div class="col-sm-6 col-lg-12">
         <mat-form-field appearance="outline" class="w-100">
-          <mat-label>Status</mat-label>
-          <select matNativeControl required name="status" [(ngModel)]="local_data.status">
+          <mat-label>Support</mat-label>
+          <input matInput required id="support" name="support" aria-label="State" [matAutocomplete]="auto3"
+            [(ngModel)]="local_data.support" [formControl]="assistCtrl" />
+        </mat-form-field>
+
+
+        <mat-autocomplete #auto3="matAutocomplete">
+          @for(employee of filteredSEmployee| async; track employee.nomComplet) {
+          <mat-option [value]="employee.nomComplet" class="d-flex align-items-center">
+            <img alt="" class="m-r-8" [src]="employee.avatar" height="25" />
+
+            <span>{{ employee.nomComplet}}</span> |
+            <small>Pôle: {{ employee.pole }}</small>
+          </mat-option>
+          }
+
+        </mat-autocomplete>
+      </div>
+
+      <div class="col-sm-6 col-lg-12">
+        <mat-form-field appearance="outline" class="w-100">
+          <mat-label>Statu</mat-label>
+          <select matNativeControl required name="statu" [(ngModel)]="local_data.statu">
             <option value="En cours">En cours</option>
             <option value="Ouvert">Ouvert</option>
-            <option value="Fermé">Fermé</option>
+            <option value="Cloture">Clôturé</option>
           </select>
         </mat-form-field>
       </div>
@@ -76,21 +107,13 @@
       <div class="col-sm-6 col-lg-12">
 
         <div>
-          <label id="example-name-label" class="f-w-600 mat-body-1"
-            >Progression {{local_data.progression}} % :
+          <label id="example-name-label"  class="f-w-600 mat-body-1">Progression {{local_data.progression}} % :
           </label>
           <!-- <label class="f-w-500 mat-body-1">{{ local_data.progression }}</label> -->
         </div>
-        <mat-slider style="width: 98%;"
-          class="example-margin"
-          [disabled]="false"
-          [max]=100
-          [min]=0
-          [step]="1"
-          [discrete]="true"
-          [showTickMarks]="false"
-        >
-          <input matSliderThumb [(ngModel)]="local_data.progression" [ngModelOptions]="{standalone: true}" />
+        <mat-slider style="width: 98%;" class="example-margin" [disabled]="false" [max]=100 [min]="0" [step]="1"
+          [discrete]="true" [showTickMarks]="false">
+          <input matSliderThumb name="progression" [(ngModel)]="local_data.progression" [ngModelOptions]="{standalone: true}" />
         </mat-slider>
 
       </div>
@@ -100,11 +123,8 @@
 
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Commentaire</mat-label>
-          <textarea
-            matInput
-            rows="5"
-            class="note-content"
-          ></textarea>
+          <textarea name="commentaire" [(ngModel)]="local_data.commentaire" matInput rows="5"
+            class="note-content"></textarea>
         </mat-form-field>
       </div>
 
@@ -114,8 +134,8 @@
 
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Date de début</mat-label>
-          <input placeholder="Date" [matDatepicker]="picker" matInput required id="date" name="date"
-            [(ngModel)]="local_data.date" />
+          <input placeholder="Date" [matDatepicker]="picker" matInput required id="date" name="dateDebut"
+            [(ngModel)]="local_data.dateDebut" />
           <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
           <mat-datepicker #picker></mat-datepicker>
         </mat-form-field>
@@ -126,7 +146,7 @@
 </mat-dialog-content>
 } @else {
 <div class="p-x-24 p-b-24">
-  Sure to delete <span class="f-w-600">{{local_data.title}}</span>?
+  Voulez-vous supprimer <span class="f-w-600">{{local_data.title}}</span>?
 </div>
 }
 
@@ -135,6 +155,6 @@
     {{action}}
   </button>
   <button mat-stroked-button color="warn" (click)="closeDialog()">
-    Cancel
+    Annuler
   </button>
 </div>
