--- a/src/app/pages/apps/ticketlist/ticketlist.component.html
+++ b/src/app/pages/apps/ticketlist/ticketlist.component.html
@@ -4,7 +4,7 @@
     <mat-card class="shadow-none">
       <div class="p-30 bg-primary text-center cursor-pointer rounded" (click)="btnCategoryClick('')">
         <h3 class="f-s-24 text-white f-w-600 m-0 m-b-4">{{ totalCount }}</h3>
-        <h6 class="text-white f-w-600 m-0 f-s-16">Total Projets</h6>
+        <h6 class="text-white f-w-600 m-0 f-s-16">Total Actions</h6>
       </div>
     </mat-card>
   </div>
@@ -26,7 +26,7 @@
   </div>
   <div class="col-sm-6 col-lg-3">
     <mat-card class="shadow-none">
-      <div class="p-30 bg-error text-center cursor-pointer rounded" (click)="btnCategoryClick('Clôturé')">
+      <div class="p-30 bg-error text-center cursor-pointer rounded" (click)="btnCategoryClick('Cloturé')">
         <h3 class="f-s-24 text-white m-0 m-b-4">{{ Closed }}</h3>
         <h6 class="text-white f-w-600 m-0 f-s-16">Clôturés</h6>
       </div>
@@ -58,21 +58,21 @@
   <mat-card-content>
     <div class="table-responsive">
       <table mat-table [dataSource]="dataSource" class="w-100 f-w-500 no-wrap">
-        <ng-container matColumnDef="id">
-          <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">Id</th>
+        <ng-container matColumnDef="categorie">
+          <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">Categorie</th>
           <td mat-cell *matCellDef="let element">
-            {{ element.id }}
+            {{ element.categorie }}
           </td>
         </ng-container>
 
-        <ng-container matColumnDef="title">
+        <ng-container matColumnDef="titre">
           <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">
             Titre
           </th>
           <td mat-cell *matCellDef="let element">
-            <h6 class="m-0 f-s-16 mat-subtitle-1 f-w-500 m-b-4">{{ element.title }}</h6>
+            <h6 class="m-0 f-s-16 mat-subtitle-1 f-w-500 m-b-4">{{ element.titre }}</h6>
             <span class="m-0 f-s-14 f-w-400 max-text d-block">{{
-              element.subtext
+              element.details
               }}</span>
           </td>
         </ng-container>
@@ -99,17 +99,16 @@
               >{{ element.status }}</span
             > -->
 
-            @if(element.status == 'En cours') {
-            <span class="bg-light-warning text-warning mat-body-2 f-w-500 p-x-8 p-y-4 f-s-12 rounded-pill">In
-              Progress</span>
+            @if(element.statu == 'En cours') {
+            <span class="bg-light-warning text-warning mat-body-2 f-w-500 p-x-8 p-y-4 f-s-12 rounded-pill">En cours</span>
             }
 
-            @if(element.status == 'Ouvert') {
-            <span class="bg-light-success text-success mat-body-2 f-w-500 p-x-8 p-y-4 f-s-12 rounded-pill">Open</span>
+            @if(element.statu == 'Ouvert') {
+            <span class="bg-light-success text-success mat-body-2 f-w-500 p-x-8 p-y-4 f-s-12 rounded-pill">Ouvert</span>
             }
 
-            @if(element.status == 'Clôturé') {
-            <span class="bg-light-error text-error mat-body-2 f-w-500 p-x-8 p-y-4 f-s-12 rounded-pill">Closed</span>
+            @if(element.statu == 'Cloture') {
+            <span class="bg-light-error text-error mat-body-2 f-w-500 p-x-8 p-y-4 f-s-12 rounded-pill">Clôturé</span>
             }
 
           </td>
@@ -125,7 +124,7 @@
         <ng-container matColumnDef="date">
           <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">Date</th>
           <td mat-cell *matCellDef="let element" class="f-s-14">
-            {{ element.date | date:'dd/MM/yyyy' }}
+            {{ element.dateDebut | date:'dd/MM/yyyy' }}
           </td>
         </ng-container>
 
