--- a/src/app/pages/apps/employee/employee.component.html
+++ b/src/app/pages/apps/employee/employee.component.html
@@ -18,20 +18,12 @@
   </mat-card-content>
 </mat-card>
 
-<div *ngIf="this.loading">
-  <mat-card class="b-1 shadow-none">
-    <mat-card-header style="display: flex; justify-content: center;">
-      <mat-card-title>Chargement...</mat-card-title>
-    </mat-card-header>
-    <mat-card-content class="b-t-1" style="display: flex; justify-content: center;">
-      <mat-spinner></mat-spinner>
-    </mat-card-content>
-  </mat-card>
-</div>
 
 
-<mat-card class="cardWithShadow" *ngIf="!this.loading">
+
+<mat-card class="cardWithShadow">
   <mat-card-content class="p-24">
+
     <div class="table-responsive">
       <table mat-table [dataSource]="dataSource" class="w-100">
         <!-- <ng-container matColumnDef="#">
@@ -109,10 +101,22 @@
           </td>
         </ng-container>
 
+
+
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
       </table>
-      <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+      <div *ngIf="this.loading">
+        <mat-card class="b-1 shadow-none">
+          <mat-card-header style="display: flex; justify-content: center;">
+            <mat-card-title>Chargement...</mat-card-title>
+          </mat-card-header>
+          <mat-card-content class="b-t-1" style="display: flex; justify-content: center;">
+            <mat-spinner></mat-spinner>
+          </mat-card-content>
+        </mat-card>
+      </div>
+      <mat-paginator  [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
     </div>
   </mat-card-content>
 </mat-card>
