--- a/src/app/pages/apps/ticketlist/ticketlist.component.html
+++ b/src/app/pages/apps/ticketlist/ticketlist.component.html
@@ -56,22 +56,13 @@
 <!-- table -->
 
 
-<div *ngIf="this.loading || this.loadingBis">
-  <mat-card class="b-1 shadow-none">
-    <mat-card-header style="display: flex; justify-content: center;">
-      <mat-card-title>Chargement...</mat-card-title>
-    </mat-card-header>
-    <mat-card-content class="b-t-1" style="display: flex; justify-content: center;">
-      <mat-spinner></mat-spinner>
-    </mat-card-content>
-  </mat-card>
-</div>
 
 
-<mat-card class="cardWithShadow" *ngIf="!this.loading && !this.loadingBis ">
+
+<mat-card class="cardWithShadow">
   <mat-card-content>
     <div class="table-responsive" >
-      <table mat-table [dataSource]="dataSource" class="w-100 f-w-500 no-wrap" *ngIf="dataSource.data">
+      <table mat-table [dataSource]="dataSource" class="w-100 f-w-500 no-wrap">
         <ng-container matColumnDef="categorie">
           <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">Categorie</th>
           <td mat-cell *matCellDef="let element">
@@ -158,6 +149,19 @@
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
       </table>
+
+      <div *ngIf="this.loading || this.loadingBis">
+        <mat-card class="b-1 shadow-none">
+          <mat-card-header style="display: flex; justify-content: center;">
+            <mat-card-title>Chargement...</mat-card-title>
+          </mat-card-header>
+          <mat-card-content class="b-t-1" style="display: flex; justify-content: center;">
+            <mat-spinner></mat-spinner>
+          </mat-card-content>
+        </mat-card>
+      </div>
+
+
     </div>
 
     <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons>
