--- a/src/app/pages/dashboards/dashboard1/dashboard1.component.html
+++ b/src/app/pages/dashboards/dashboard1/dashboard1.component.html
@@ -15,6 +15,10 @@
   <div class="col-lg-10">
     <app-revenue-forecast></app-revenue-forecast>
   </div>
+  <div class="col-lg-10">
+    <app-top-cards></app-top-cards>
+  </div>
+
   <div class="col-lg-5">
     <app-your-performance></app-your-performance>
   </div>
@@ -26,6 +30,15 @@
       <div class="col-md-6">
         <app-sales-overview></app-sales-overview>
       </div>
+    </div>
+  </div>
+
+  <div class="col-lg-7">
+    <div class="row">
+      <!-- <div class="col-md-6">
+        <app-new-customers></app-new-customers>
+      </div> -->
+
     </div>
   </div>
   <!-- <div class="col-lg-8">
