"liste deroulante correctif"

--- a/src/app/components/dashboard3/top-cards/top-cards.component.html
+++ b/src/app/components/dashboard3/top-cards/top-cards.component.html
@@ -36,7 +36,7 @@
                 mat-raised-button
                 class="f-w-500 f-s-12 btn-shadow text-nowrap"
               >
-                View Details
+                Voir plus
               </button>
             </mat-card-content>
           </mat-card>
@@ -74,7 +74,7 @@
                 mat-raised-button
                 class="f-w-500 f-s-12 btn-shadow text-nowrap"
               >
-                View Details
+                Voir plus
               </button>
             </mat-card-content>
           </mat-card>
