--- a/src/app/pages/apps/employee/add/add.component.html
+++ b/src/app/pages/apps/employee/add/add.component.html
@@ -1,6 +1,6 @@
-<div class="p-x-24">
-  <p class="f-w-500">Le consultant a bien été ajouté</p>
-  <p>vous prouver le consulter via la table</p>
+<div class="p-x-24" style="display: flex; justify-content: center;">
+  <p class="f-w-500">Ajout réussi</p>
+  <!-- <p>Vous pouvez le consulter via la table</p> -->
 </div>
 <mat-dialog-actions class="p-x-24 p-b-24">
   <button mat-flat-button color="primary" mat-dialog-close>Ok</button>
