--- a/src/app/pages/apps/ticketlist/ticketlist.component.html
+++ b/src/app/pages/apps/ticketlist/ticketlist.component.html
@@ -64,13 +64,13 @@
     <div class="table-responsive" >
       <table mat-table [dataSource]="dataSource" class="w-100 f-w-500 no-wrap">
         <ng-container matColumnDef="categorie">
-          <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">Categorie</th>
+          <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">Catégorie</th>
           <td mat-cell *matCellDef="let element">
             {{ element.categorie }}
           </td>
         </ng-container>
 
-        <ng-container matColumnDef="titre">
+        <ng-container matColumnDef="titre" >
           <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">
             Titre
           </th>
@@ -114,6 +114,34 @@
 
             @if(element.statu == 'Cloture') {
             <span class="bg-light-error text-error mat-body-2 f-w-500 p-x-8 p-y-4 f-s-12 rounded-pill">Clôturé</span>
+            }
+
+          </td>
+        </ng-container>
+
+        <ng-container matColumnDef="nbJour">
+
+
+          <!-- nbJours -->
+          <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">
+            Nb Jours
+          </th>
+          <td mat-cell *matCellDef="let element">
+            <!-- <span
+              class="bg-light mat-body-2 f-w-500 p-x-8 p-y-4 rounded-pill f-s-12"
+              >{{ element.status }}</span
+            > -->
+
+            @if(element.nbJour >10 && element.nbJour <=30) {
+            <span class="bg-light-warning text-warning mat-body-2 f-w-500 p-x-8 p-y-4 f-s-12 rounded-pill">{{element.nbJour}} J</span>
+            }
+
+            @if(element.nbJour <=10) {
+            <span class="bg-light-success text-success mat-body-2 f-w-500 p-x-8 p-y-4 f-s-12 rounded-pill">{{element.nbJour}} J</span>
+            }
+
+            @if(element.nbJour >30) {
+            <span class="bg-light-error text-error mat-body-2 f-w-500 p-x-8 p-y-4 f-s-12 rounded-pill">{{element.nbJour}} J</span>
             }
 
           </td>
