--- a/src/app/pages/dashboards/dashboard1/dashboard1.component.html
+++ b/src/app/pages/dashboards/dashboard1/dashboard1.component.html
@@ -33,6 +33,10 @@
     </div>
   </div>
 
+  <!-- <div class="col-lg-7">
+    <app-basic-table></app-basic-table>
+  </div> -->
+
   <div class="col-lg-7">
     <div class="row">
       <!-- <div class="col-md-6">
