--- a/src/app/pages/tables/basic-table/basic-table.component.html
+++ b/src/app/pages/tables/basic-table/basic-table.component.html
@@ -1,7 +1,7 @@
 <mat-card class="cardWithShadow">
   <mat-card-content>
-    <mat-card-title>Top Projects</mat-card-title>
-    <mat-card-subtitle class="mat-body-1">top new products</mat-card-subtitle>
+    <mat-card-title>Classement par </mat-card-title>
+    <mat-card-subtitle class="mat-body-1">nombre de projets</mat-card-subtitle>
 
     <div class="table-responsive">
       <table mat-table [dataSource]="dataSource1" class="w-100">
@@ -12,7 +12,7 @@
             *matHeaderCellDef
             class="f-w-600 mat-subtitle-1 f-s-14 p-l-0"
           >
-            Assigned
+            Personne en charge
           </th>
           <td mat-cell *matCellDef="let element" class="p-l-0">
             <div class="d-flex align-items-center">
@@ -41,7 +41,7 @@
             *matHeaderCellDef
             class="f-w-600 mat-subtitle-1 f-s-14"
           >
-            Name
+            Nb de projets
           </th>
           <td mat-cell *matCellDef="let element" class="mat-body-1">
             {{ element.productName }}
@@ -55,7 +55,7 @@
             *matHeaderCellDef
             class="f-w-600 mat-subtitle-1 f-s-14"
           >
-            Priority
+            Bande passante
           </th>
           <td mat-cell *matCellDef="let element">
             @if(element.priority == 'low') {
@@ -99,10 +99,10 @@
             *matHeaderCellDef
             class="f-w-600 mat-subtitle-1 f-s-14"
           >
-            Budget
+          Nb jours projets
           </th>
           <td mat-cell *matCellDef="let element" class="mat-body-1">
-            ${{ element.budget }}k
+            {{ element.budget }} j
           </td>
         </ng-container>
 
@@ -215,7 +215,7 @@
                 Sales
               </th>
               <td mat-cell *matCellDef="let element" class="mat-body-1">
-                ${{ element.sales }}k
+                {{ element.sales }} j
               </td>
             </ng-container>
 
@@ -281,7 +281,7 @@
                 *matCellDef="let element"
                 class="mat-body-1 text-right"
               >
-                +${{ element.price }}
+                +{{ element.price }}
               </td>
             </ng-container>
 
@@ -374,7 +374,7 @@
             *matCellDef="let element"
             class="f-w-500 text-right p-r-0"
           >
-            ${{ element.budget }}k
+            {{ element.budget }} J
           </td>
         </ng-container>
 
