--- a/src/app/components/dashboard1/revenue-forecast/revenue-forecast.component.html
+++ b/src/app/components/dashboard1/revenue-forecast/revenue-forecast.component.html
@@ -19,21 +19,24 @@
         <div class="d-flex">
           <i-tabler name="circle-filled" class="text-primary icon-8"></i-tabler>
           <div class="m-l-8">
-            <span class="mat-subtitle-2">2024</span>
+            <span class="mat-subtitle-2">{{this.anneetrois}}</span>
           </div>
         </div>
-        <div class="d-flex">
-          <i-tabler name="circle-filled" class="text-error icon-8"></i-tabler>
-          <div class="m-l-8">
-            <span class="mat-subtitle-2">2023</span>
-          </div>
-        </div>
+
         <div class="d-flex">
           <i-tabler name="circle-filled" class="text-accent icon-8"></i-tabler>
           <div class="m-l-8">
-            <span class="mat-subtitle-2">2022</span>
+            <span class="mat-subtitle-2">{{this.anneeun}} </span>
           </div>
         </div>
+
+        <div class="d-flex">
+          <i-tabler name="circle-filled" class="text-error icon-8"></i-tabler>
+          <div class="m-l-8">
+            <span class="mat-subtitle-2">{{this.anneedeux}}</span>
+          </div>
+        </div>
+
       </div>
     </div>
 
