--- a/src/app/pages/apps/employee/employee.component.html
+++ b/src/app/pages/apps/employee/employee.component.html
@@ -34,9 +34,9 @@
         <ng-container matColumnDef="nom">
           <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">Nom</th>
           <td mat-cell *matCellDef="let element">
-            <div class="d-flex align-items-center">
+            <div class="d-flex align-items-center" >
               <img class="rounded-circle" [src]="element.avatar" width="40" />
-              <div class="m-l-16">
+              <div class="m-l-16" style="width: 200px; flex-direction: column">
                 <p class="f-w-600 mat-subtitle-1 f-s-16 m-t-0">
                   {{ element.nom }} {{element.prenoms}}
                 </p>
