--- a/src/app/pages/apps/ticketlist/ticketlist.component.html
+++ b/src/app/pages/apps/ticketlist/ticketlist.component.html
@@ -75,10 +75,12 @@
             Titre
           </th>
           <td mat-cell *matCellDef="let element">
-            <h6 class="m-0 f-s-16 mat-subtitle-1 f-w-500 m-b-4">{{ element.titre }}</h6>
+            <div style="max-width:200px ;display: flex; flex-wrap: wrap;flex-direction: column;">
+              <h6 class="m-0 f-s-16 mat-subtitle-1 f-w-500 m-b-4">{{ element.titre }}</h6>
             <span class="m-0 f-s-14 f-w-400 max-text d-block">{{
               element.details
               }}</span>
+            </div>
           </td>
         </ng-container>
 
@@ -87,7 +89,7 @@
             Assigné à
           </th>
           <td mat-cell *matCellDef="let element">
-            <div class="d-flex align-items-center">
+            <div class="d-flex align-items-center" style="max-width: 200px;">
               <img [src]="element.imgSrc" alt="user" width="35" class="rounded-circle m-r-8" />
               <span class="f-w-600 f-s-16 mat-subtitle-1">{{ element.assignee }}</span>
             </div>
