--- a/src/app/pages/dashboards/dashboard1/dashboard1.component.html
+++ b/src/app/pages/dashboards/dashboard1/dashboard1.component.html
@@ -38,6 +38,9 @@
   </div> -->
 
   <div class="col-lg-7">
+    <app-footer-row-table></app-footer-row-table>
+  </div>
+  <div class="col-lg-7">
     <div class="row">
       <!-- <div class="col-md-6">
         <app-new-customers></app-new-customers>
